--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,13 @@ Jinja2==2.10
 MarkupSafe==1.0
 more-itertools==4.3.0
 nose==1.3.7
+pipenv==2018.7.1
 pluggy==0.7.1
 py==1.5.4
 pytest==3.7.2
 requests==2.19.1
 six==1.11.0
 urllib3==1.23
+virtualenv==16.0.0
+virtualenv-clone==0.3.0
 Werkzeug==0.14.1
