--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install pytest
 # command to run tests
 script:
-  - coverage run -m pytest --cover-package=test
+  - coverage run -m pytest test/
   - coverage report
 
 after_success:
