--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,12 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install coverage
   - pip install coveralls
-  - pip install pytest
+  - pip install nose
 # command to run tests
 script:
-  - coverage run -m pytest test/
+  - nosetests --with-coverage --cover-package=test
   - coverage report
 
 after_success:
