--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install nose
 # command to run tests
 script:
-  - nosetests --with-coverage --cover-package=test
+  - nosetests --with-coverage --cover-package=routes models
   - coverage report
 
 after_success:
