--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,26 @@
-atomicwrites==1.1.5
-attrs==18.1.0
+astroid==2.0.4
 certifi==2018.8.13
 chardet==3.0.4
 click==6.7
 colorama==0.3.9
 coverage==4.5.1
-coveralls==1.3.0
+coveralls==1.4.0
 docopt==0.6.2
 Flask==1.0.2
 Flask-API==1.0
 gunicorn==19.9.0
 idna==2.7
+isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
-more-itertools==4.3.0
+mccabe==0.6.1
 nose==1.3.7
-pipenv==2018.7.1
-pluggy==0.7.1
-py==1.5.4
-pytest==3.7.2
+pylint==2.1.1
 requests==2.19.1
 six==1.11.0
+typed-ast==1.1.0
 urllib3==1.23
-virtualenv==16.0.0
-virtualenv-clone==0.3.0
 Werkzeug==0.14.1
+wrapt==1.10.11
