--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 nose==1.3.7
+psycopg2==2.7.5
 pylint==2.1.1
 requests==2.19.1
 six==1.11.0
