--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,9 @@ script:
   
 after_success:
   - coveralls
+
+services:
+ - postgresql
+
+before_script:
+  - psql -c 'create database test_db;' -U postgres 
